WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277542
REGRESSION(
281640@main
): [WPE] Do not try to use explicit sync with shared memory buffers
https://bugs.webkit.org/show_bug.cgi?id=277542
Summary
REGRESSION(281640@main): [WPE] Do not try to use explicit sync with shared me...
Carlos Garcia Campos
Reported
2024-08-02 04:13:55 PDT
We should check the buffer type before using DMA-BUF specific APIs.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2024-08-02 04:16:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31639
EWS
Comment 2
2024-08-04 22:21:10 PDT
Committed
281822@main
(c6b7bd1d25ee): <
https://commits.webkit.org/281822@main
> Reviewed commits have been landed. Closing PR #31639 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug