REGRESSION(281640@main): [WPE] Do not try to use explicit sync with shared memory buffers https://bugs.webkit.org/show_bug.cgi?id=277542

Reviewed by Alejandro G. Castro.

We should check the buffer type before using DMA-BUF specific APIs.

* Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp:
(wpeViewWaylandRenderBuffer):

Canonical link: https://commits.webkit.org/281822@main